add structure spacing, preview and disable controls to the config screen